@@ -34,13 +34,12 @@ setApplicationValue (id value, const char *ptr)
 }
 
 void
-initSwarm(int argc, char ** argv)
+initSwarm (int argc, char **argv)
 {
-  int i ;
+  int i;
 
   initModule(activity);
-
-  initProbing() ;
+  initProbing();
 
   swarmGUIMode = 1;
   applicationName = [String create: globalZone setC: ""];
@@ -48,78 +47,23 @@ initSwarm(int argc, char ** argv)
   setApplicationValue (applicationName, argv[0]);
   setApplicationValue (applicationMode, "default");
 
-  for(i = 1 ; i < argc ; i++) {
-    if ( !strcmp(argv[i],"-help") )
-      printHelp();
-    else if ( !strcmp(argv[i],"-batchmode") )
-      swarmGUIMode = 0 ;
-    else if ( !strncmp(argv[i],"-a",2) && (i + 1 < argc))
-      setApplicationValue (applicationMode, argv[i+1]);
-  }
+  for (i = 1; i < argc; i++)
+    {
+      if (!strcmp (argv[i],"-help"))
+        printHelp ();
+      else if (!strcmp (argv[i],"-batchmode"))
+      swarmGUIMode = 0;
+      else if (!strncmp (argv[i], "-a", 2) && (i + 1 < argc))
+        setApplicationValue (applicationMode, argv[i+1]);
+    }
   
   archiver = [Archiver ensure : globalZone];
 
-  initRandom(argc, argv);
-  
-  if (swarmGUIMode) {
-    initTkObjc(argc, argv);
+  initRandom (argc, argv);
 
-  [globalTkInterp eval: "bitmap define hide {{16 16} {
-   0x00, 0x00, 0x00, 0x00, 0x04, 0x80, 0x08, 0x40, 0x90, 0x27, 0x60, 0x18,
-   0x60, 0x18, 0x90, 0x24, 0x10, 0x23, 0x10, 0x23, 0x90, 0x24, 0x60, 0x18,
-   0x60, 0x18, 0x90, 0x27, 0x08, 0x40, 0x04, 0x80}}"] ;
-
-  [globalTkInterp eval: "bitmap define super {{16 16} {
-   0x00, 0x00, 0x00, 0x00, 0x7c, 0x08, 0x44, 0x04, 0x44, 0x7e, 0x44, 0x44,
-   0x7c, 0x48, 0x00, 0x40, 0x00, 0x40, 0x00, 0x40, 0x00, 0x40, 0x7c, 0x40,
-   0x44, 0x40, 0x44, 0x7e, 0x44, 0x00, 0x7c, 0x00}}"] ;
-
-  [globalTkInterp eval: "bitmap define special {{16 16} {
-   0x00, 0x00, 0x00, 0x00, 0x04, 0x80, 0x08, 0x40, 0x90, 0x27, 0x60, 0x1b,
-   0x60, 0x1b, 0x90, 0x27, 0xf0, 0x3c, 0xf0, 0x3c, 0x90, 0x27, 0x60, 0x1b,
-   0x60, 0x1b, 0x90, 0x27, 0x08, 0x40, 0x04, 0x80}}"] ;
-
-  [globalTkInterp eval: "proc send_id {interp ddwin data} {
-                           global DDOBJ ; set DDOBJ $data ;
-                           drag&drop target $ddwin handle id }"] ;
-
-  [globalTkInterp eval: "proc gimme {asdf} {
-                           return $asdf }"] ;
-
-  [globalTkInterp eval: "proc sitecmd {state token} {
- if {$state} {$token.l configure -fg OliveDrab} else {
-              $token.l configure -fg black}}"] ;   
-
-  [globalTkInterp eval: 
-      "proc do_package {probe token} {
-      set local [$probe package] ;
-      if {$local != {}} {
-        set label_text [$probe getId]  
-      if {[winfo children $token] == {}} {
-         label $token.l -text $label_text -fg black ; pack $token.l ;
-      } else {
-        $token.l config -text $label_text -fg black ;
-      }
-      return $local}}"] ;
-
-  [globalTkInterp eval: 
-      "proc do_package_arg {probe arg_num token} {
-      set local [$probe package: $arg_num] ;
-      if {$local != {}} {
-        set label_text [$probe getId: $arg_num]  
-      if {[winfo children $token] == {}} {
-         label $token.l -text $label_text -fg black ; pack $token.l ;
-      } else {
-        $token.l config -text $label_text -fg black ;
-      }
-      return $local}}"] ;
-
-  probeDisplayManager = [ProbeDisplayManager create: globalZone];
-  } else {
-    globalTkInterp = [Tcl alloc];		  // misnomer
-    [globalTkInterp initWithArgc: 1 argv: argv];
-    [globalTkInterp registerObject: globalTkInterp withName: "globalTkInterp"];
-  }
+  initTkObjc (argc, argv);
+  if (swarmGUIMode)
+    probeDisplayManager = [ProbeDisplayManager create: globalZone];
   
   // various states used in ControlPanel.
   defsymbol(ControlStateRunning);
@@ -129,7 +73,8 @@ initSwarm(int argc, char ** argv)
   defsymbol(ControlStateNextTime);
 }
 
-void printHelp()
+void
+printHelp()
 {
   (void) fprintf(stdout, "Swarm.  Copyright (C) 1997 Santa Fe Institute\n");
   (void) fprintf(stdout, "For more info, see:\n"
