@@ -1,3 +1,10 @@
+1997-12-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* simtools.m (initSwarm): Remove TkInterp evals for bitmaps
+	hide, super, and special.  Remove Tcl routines send_id, gimmie,
+	sitecmd, and do_package.  (These are now in tkobjc's simtools.tcl.)
+	Reformatting throughout.
+	
 Mon Dec  8 22:37:39 1997  glen e. p. ropella  <gepr@swarm.com>
 
 	* simtools: replaced all instances of swarmobject.h with
